--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
         <div class="container-header">
                 <h1 id="otsikko">Minea Lehtinen</h1>
-                <h2 id="titteli">OMPELIJA-PUVUSTAJA</h2>
+        </div>
+        <div id="titteli">
+          <h2>mittatilausompelija ja pukusuunnittelija</h2>
         </div>
         <div class="container-link">
                 <a href="index_custom.html">
@@ -34,7 +36,6 @@
         </div>
 
         <div class="container-bottom">
-          <p>Sivuston loi Emilia</p>
         </div>
     </div>
 
