--- a/index_info.html
+++ b/index_info.html
@@ -21,7 +21,9 @@
       </div>
     <div class="container-header">
       <h1 id="otsikko">Minea Lehtinen</h1>
-      <h2 id="titteli">MINUSTA</h2>
+    </div>
+    <div>
+      <h2 id="titteli">minusta</h2>
     </div>
     <div class="container-link">
         <div id="kuva">
@@ -54,11 +56,10 @@
     <div id="lähetä">
       <input class="button1" type="submit" value="Submit">
     </div>
-    
+  </div>
     <div class="container-bottom">
-      <p>Sivuston loi Emilia</p>
     </div>
-    </div>
+  </div>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
