--- a/index_custom.html
+++ b/index_custom.html
@@ -21,9 +21,10 @@
     </div>
     <div class="container-header">
       <h1 id="otsikko">Minea Lehtinen</h1>
-      <p id="esittely">Teen mittatilaustyönä vaatteita ja asusteita. Voit ottaa yhteyttä mallin tai kankaan pohjalta,
-        niin lähdetään suunnittelemaan ja toteuttamaan unelmasi!
-      </p>
+    </div>
+    <div id="esittely">
+      <p>Teen mittatilaustyönä vaatteita ja asusteita. Voit ottaa yhteyttä mallin tai kankaan pohjalta,
+        niin lähdetään suunnittelemaan ja toteuttamaan unelmasi!</p>
     </div>
     <div class="container-carousel">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -34,7 +35,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="tnt" src="A-linjainen mekko.png" alt="A-linjainen mekko: mittatilaustyö">
+            <img class="tnt" src="A-linjainenmekko.png" alt="mekkomittatilaustyo">
           </div>
           <div class="carousel-item">
             <img class="tnt" src="mekko.png" alt="Juhlamekko: mittatilaustyö">
@@ -52,10 +53,10 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    <div class="container-bottom">
-      <p>Sivuston loi Emilia</p>
     </div>
-
+    <div class="container-bottom">
+    </div>
+  </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
