--- a/index_puvustukset.html
+++ b/index_puvustukset.html
@@ -21,7 +21,9 @@
     </div>
     <div class="container-header">
       <h1 id="otsikko">Minea Lehtinen</h1>
-      <p id="esittely">Olen tehnyt puvustus- ja ompelutöitä useissa eri projekteissa. Teattereille olen tehnyt puvustuksia Turun Nuorelle teatterille,
+    </div>
+    <div id="esittely">
+      <p>Olen tehnyt puvustus- ja ompelutöitä useissa eri projekteissa. Teattereille olen tehnyt puvustuksia Turun Nuorelle teatterille,
         Turun ylioppilasteatterille ja Turun kaupunginteatterille. Olen puvustanut lisäksi Turun taideakatemian sirkuslinjan näytöksiä.</p>
       </p>
     </div>
@@ -34,13 +36,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="tnt" src="TNT1.png" alt="Turun Nuori teatteri: Kylän lapset">
+          <img class="d-block w-100" src="TNT1.png" alt="Turun Nuori teatteri: Kylän lapset">
         </div>
         <div class="carousel-item">
-          <img class="tnt" src="TNT2.png" alt="Turun Nuori teatteri: Kyläläinen">
+          <img class="d-block w-100" src="TNT2.png" alt="Turun Nuori teatteri: Kyläläinen">
         </div>
         <div class="carousel-item">
-          <img class="tnt" src="TNT3.png" alt="Turun Nuori teatteri: Tuomari">
+          <img class="d-block w-100" src="TNT3.png" alt="Turun Nuori teatteri: Tuomari">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,9 +55,7 @@
       </a>
     </div>
   </div>
-    <div class="container-bottom">
-      <p>Sivuston loi Emilia</p>
-    </div>
+    <div class="container-bottom"></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
